--- a/PS.tex
+++ b/PS.tex
@@ -7,6 +7,32 @@
     ауфная нацистская цитата с ворот Освенцима 
 \end{flushright}
 
+\begin{center}
+    \textit{ЕВАНГИЛИЕ ОТ ВОВОЧКИ.}
+\end{center}
+
 Парни и тяночки, здесь и далее линала больше не будет, а будет кринж, мои мысли, мысли моих коллег(калек, ахах(привыкайте к скобочкам, я их люблю)) и, разумеется еврейские анекдоты. Во-первых, хочу сказать спасибо всем, кто помогал мне с этой ПДФкой, а также всей моей группе, вы няшки. Во-вторых, спасибо однокурсникам за то, что вы были и были адекватны и за то, что со своими шутками я до сих пор жив. В-третьих, если вы тян (ну или милый и ласковый мальчик), то я не обижусь, если мне на почту вы будете писать не только с правками и вопросами.\\
+
+\begin{center}
+    \textit{ЕВАНГИЛИЕ ОТ №2.}
+\end{center}
+
+напишите что-нибудь тут от себя
+
+\begin{center}
+    \textit{ЕВАНГИЛИЕ ОТ №3.}
+\end{center}
+
+напишите что-нибудь тут от себя
+
+\begin{center}
+    \textit{ЕВАНГИЛИЕ ОТ №4.}
+\end{center}
+
+напишите что-нибудь тут от себя\\
+
+\begin{center}
+    \textit{Анекдоты про Вовочку и не только.}
+\end{center}
 
 Приходит Изя в публичный дом в Иерусалиме, спрашивает, есть ли сегодня Розочка. Ему говорят, что да, есть, 200\$ стоит. Снял он Розочку, сделал дело, заплатил. На следующий день прриходит --- та же история. И на третий день снова приходит к Розочке, а она и говорит Изе: "что вы это, Изенька, всё ко мне ходите, вот уже третий день, вы что, влюбились в меня?!". "Да ну что вы, Розочка" --- отвечает ей Изя: "меня просто ваша тетя Сара из Одессы просила вам 600\$ передать". 
