--- a/main.tex
+++ b/main.tex
@@ -72,8 +72,8 @@
     
     Теперь разложим $\forall x \in V$ в выбранном базисе, подействуем на него оператором и посмотрим, что интересного произойдёт: $Ax = \alpha_1 Aa_1 + \cdots + \alpha_k Aa_k + \alpha_{k + 1}Ab_{k + 1} + \cdots + \alpha_nAb_n = \alpha_{k + 1}Ab_{k + 1} + \cdots + \alpha_nAb_n$, заметим, что любой вектор из образа можно представить как линейную комбинацию $n - k$ линейно независимых векторов $Ab_{k + 1} + \cdots + Ab_n$, то есть это базис образа, то есть $dim(imA) = n - k$.\\
     
-    Осталось сложить дважды два: $dim(kerA) + dim(imA) = k + (n - k) = n$. Ч.Т.Д.
-    
+    Осталось сложить дважды два: $dim(kerA) + dimA(imA) = k + (n - k) = n$. Ч.Т.Д.
+    A
     \item \textbf{Докажите, что если сумма ядер двух линейных операторов, действующих на одном пространстве, совпадает с этим пространством, то образ суммы равен сумме образов.}\\
 
     Дано: $A: V \rightarrow V, B: V \rightarrow V$, $kerA + kerB = V$, это означает, что любой вектор $\forall x \in V$ можно представить в виде $x = a + b$, где $a \in kerA \quad b \in kerB$, тогда подействуем на этот вектор оператором $A + B$: $(A + B)x = (A + B)(a + b) = Aa + Ab + Ba + Bb = Ab + Ba$, где $Ab \in imA, Ba \in imB$. То есть любой вектор из образа суммы лежит в сумме образов.\\
@@ -92,9 +92,49 @@
 
     Рассмотрим сумму операторов $P$ и $Q$: $P + Q = (A + B)^{-1}A + (A + B)^{-1}B = (A + B)^{-1}(A + B) = I \Rightarrow P = I - Q$. А значит $PQ = (I - Q)Q = Q - Q^2 = Q(I - Q) = QP$. Ч.Т.Д.\\
     
-    \item \textbf{Докажите, что для того, чтобы оператор $P: V \rightarrow V$ был оператором проектирования, необходимо и достаточно, чтобы выполнялось условие $P^2 = P$.}
+    \item \textbf{Докажите, что для того, чтобы оператор $P: V \rightarrow V$ был оператором проектирования, необходимо и достаточно, чтобы выполнялось условие $P^2 = P$.}\\
+
+    \textit{Необходимость:} $V = \L_1 \oplus L_2$, $P : V \rightarrow V$ --- оператор проектирования на $L_1$ параллельно $L_2$, то есть для $\forall x \in V x = x_1 + x_2$, где $x_1 \in L_1, x_2 \in L_2$ вектор $Px = x_1$, покажем, что тогда $P^2 = P$: $\forall x \in V x = x_1 + x_2$, где $x_1 \in L_1, x_2 \in L_2$ вектор $P^2x = P(Px) = Px_1 = x_1$, то есть $P^2 = P$.\\
+
+    \textit{Достаточность:} Оператор $P : V \rightarrow V$ такой, что $P^2 = P$, докажем, что он является оператором проектирования: рассмотрим какой-то рандомный вектор $y \in V$ и подействуем на него оператором $Py = x \in imP$, и ещё раз подействуем $P^2y = P(Py) = Px$, так как $P^2 = P$, то $Px = x = Py$, теперь введём вектор $z = y - x$, тогда $y = x + z$, подействуем на это выражение оператором $P$: $Py = Px + Pz \Rightarrow x = x + Pz \Rightarrow Pz = 0 \Rightarrow z \in kerP$.\\
+    Заметим, что вектора $x$ и $z$ определены однозначно, то есть $V = imP \oplus kerP$ и  для $\forall x \in V x = x_1 + x_2$, где $x_1 \in imP$ и $x_2 \in kerP$ выполнено $Px = x_1$, то есть $p$ --- оператор проектирования. Ч.Т.Д.
     
-    \item \textbf{Докажите, что для того чтобы матрицы одного размера были матрицами одного и того же линейного оператора в каких-то парах базисов необходимо и достаточно, чтобы они имели одинаковый ранг.}
+    \item \textbf{Докажите, что для того чтобы матрицы одного размера были матрицами одного и того же линейного оператора в каких-то парах базисов необходимо и достаточно, чтобы они имели одинаковый ранг.}\\
+
+    \begin{center}
+        ВНИМАНИЕ!\\
+        Тема перехода из одного базиса в другой зачастую вызывает непроизвольное воспламенение в области мозга и не только, потому что $Q_{eg}$ у Тыртышникова это матрица перехода из $g$ в $e$, а в задачнике Ким это матрица перехода из $e$ в $g$. Из-за этого, очевидно, возникает нехилая путаница, поэтому тут я буду придерживаться обозначений Евгения Евгеньевича во избежание недопонимания.
+    \end{center}
+
+    По Тыртышу матрицей перехода из старого базиса $g$ в новый базис $e$ называется матрица $Q_{eg}$ столбцы которой --- координаты векторов старого базиса $g$ в новом базисе $e$. Вектора в разных базисах связаны следующим соотношением: $[x]_e = Q_{eg}[x]_g$.\\
+    
+    Общая формула для матрицы оператора при переходе от одной пары базисов в другую для оператора $A: V \rightarrow W$: $[A]_{hg} = Q_{hf}[A]_{fe}P_{eg}$, где $h$ и $f$ --- базисы $W$, а $e$ и $g$ --- базисы $V$.\\
+
+    Если оператор $A: V \rightarrow V$, то это соотношение можно переписать как $[A]_g = Q_{eg}^{-1}A_eQ_{eg}$
+
+    \textit{Решение:} Пусть есть 2 матрицы операторов $A_{m \times n}$ и $B_{m \times n}$, их можно элементарными преобразованиями привести к диагональному виду, где первые $r_1 = rankA$ ($r_2 = rankB$ соответственно) элементов на диагонали --- единицы, а остальные нули:
+    \[
+    A = Q_1
+    \begin{bmatrix}
+        I_{r_1 \times r_1} & 0 \\
+        0 & 0
+    \end{bmatrix}P_1
+    \quad
+    B = Q_2
+    \begin{bmatrix}
+        I_{r_2 \times r_2} & 0 \\
+        0 & 0
+    \end{bmatrix}P_2
+    \]
+    При этом матрицы $Q_1, Q_2, P_1, P_2$ невырожденные. Так как матрица перехода из одного базиса в другой всегда невырожденная, а умножение на невырожденную матрицу не меняет ранг, то равенство рангов является необходимым условием для того, чтобы матрицы $A$ и $B$ были матрицами одного и того же оператора. Если же $r_1 = r_2$, то так как матрицы перехода невырожденны, то:
+    \[
+    \begin{bmatrix}
+        I_{r_2 \times r_2} & 0 \\
+        0 & 0
+    \end{bmatrix} = Q_2^{-1}BP_2^{-1} 
+    \Rightarrow A = Q_1Q_2^{-1}BP_2^{-1}P_1 = QBP
+    \]
+    а значит существуют такие матрицы перехода от одной пары базисов к другому $Q$ и $P$, что в первой паре базисов оператор имеет матрицу $A$, а во второй $B$, то есть равенство рангов это достаточное условие. Ч.Т.Д.
     \item \textbf{Докажите, что определитель и след квадратной матрицы являются инвариантами подобия}
 
     \textit{Определитель:} Матрица $B$ подобна матрице $A$, то есть $B = Q^{-1}AQ \Rightarrow |B| = |Q^{-1}||A||Q| = |Q^{-1}||Q||A| = |Q^{-1}Q||A| = |I||A| = |A|$ так как произведение определителей равно определителю произведения. Ч.Т.Д.\\
@@ -163,19 +203,174 @@
     тогда если $n$ чётное, то $D_n = (\lambda^2 - 1)^{\frac{n}{2}}$, а если нечётное, то $D_n = (\lambda^2 - 1)^{\frac{n - 1}{2}}(1 - \lambda)$.\\
     Ответ:\\ при $n = 2k, k \in \mathds{R}$ характеристический многочлен равен $|A - \lambda I| = (\lambda^2 - 1)^{\frac{n}{2}}$\\
     при $n = 2k - 1, k \in \mathds{R}$ этот многочлен равен $|A - \lambda I| = (\lambda^2 - 1)^{\frac{n - 1}{2}}(1 - \lambda)$.\\
-    \item \textbf{Найдите все инвариантные подпространства оператора дифференциирования в пространстве всех вещественных многочленов.}
-    \item \textbf{Докажите, что число является собственным значением линейного оператора на конечномерном пространстве в том и только в том случае, когда оно является корнем его характеристического многочлена.}
+    \item \textbf{Найдите все инвариантные подпространства оператора дифференциирования в пространстве всех вещественных многочленов.}\\
+
+    Возьмём многочлен $f(t)$ степени $n$ и найдём минимальное инвариантное подпространство $L$, в котором он содержится. Заметим, что в этом пространстве должны содержаться также многочлены $Af, A^2f, \cdots, A^nf$ степеней $n - 1, n - 2, \cdots, 0$, а также все их линейные комбинации. Запишем все многочлены $f, Af, A^2f, \cdots, A^nf$ в виде матрицы, где строки это коэффициенты соответствующего многочлена, степени записаны начиная с $n$-ной слева направо:\\
+    \[
+    \begin{bmatrix}
+        a_n & a_{n - 1} & \cdots & a_1 & a_0\\
+        0 & na_n & \cdots & 2a_2 & a_1\\
+        \vdots & \vdots & \ddots & \vdots & \vdots\\
+        0 & 0 &\cdots & n!a_n & (n - 1)!a_{n -1}\\
+        0 & 0 &\cdots & 0 & n!a_n\\
+    \end{bmatrix} \rightarrow
+    \begin{bmatrix}
+        a_n & 0 & \cdots & 0 & 0\\
+        0 & na_n & \cdots & 0 & 0\\
+        \vdots & \vdots & \ddots & \vdots & \vdots\\
+        0 & 0 &\cdots & n!a_n & 0\\
+        0 & 0 &\cdots & 0 & n!a_n\\
+    \end{bmatrix} \rightarrow
+    \begin{bmatrix}
+        1 & 0 & \cdots & 0 & 0\\
+        0 & 1 & \cdots & 0 & 0\\
+        \vdots & \vdots & \ddots & \vdots & \vdots\\
+        0 & 0 &\cdots & 1 & 0\\
+        0 & 0 &\cdots & 0 & 1\\
+    \end{bmatrix}
+    \]
+    То есть $L$ обязано содержать многочлены $1, t, \cdots, t^n$ и их линейные комбинации, то есть $L \supset M_n$ где $M_n$ --- множество всех многочленов степени не более $n$, при этом $M_n$ является инвариантным относительно оператора дифференциирования $D$, так как он только понижает степень многочлена. То есть $L = M_n$. \\
+
+    Теперь пусть у нас есть линейное подпространство $Z$, найдём минимальное инвариантное подпространство $L \supset Z$. Пусть $n$ --- максиманьная степень многочлена из $Z$, тогда очевидно, что$Z \subset M_n$, причём $M_n$ --- минимальное такое подпространство.\\
+
+    Таким образом как бы мы не выбирали подпространство пространства многочленов минимальное инвариантное пространство, содержащее его это $M_n$ и пространство само является инвариантным только если оно равно $M_n$.\\
+
+    Ответ: инвариантными будут все подпространства $M_n, n \in \mathds{N} + {0}$ и никакие другие.
+    \item \textbf{Докажите, что число является собственным значением линейного оператора на конечномерном пространстве в том и только в том случае, когда оно является корнем его характеристического многочлена.}\\
+
+    $\Rightarrow$ Пусть $\lambda$ --- собственное значение оператора $A: V \rightarrow V$, то есть $Ax = \lambda x$ для некоторого ненулевого $x \in V$, перенесём всё в левую часть: $Ax - \lambda x = 0 \Leftrightarrow Ax - \lambda I x = 0 \Leftrightarrow (A - \lambda I)x = 0$, а это означает, что существует нетривиальная линейная комбинация столбцов, равная нулю, а значит они линейно зависимы, а это означает, что $|A - \lambda I| = 0$, что и означает, что $\lambda$ --- корень характеристического многочлена линейного оператора $A$.\\
+
+    $\Leftarrow$ Пусть $\lambda$ --- корень характеристического многочлена, то есть $|A - \lambda I| = 0$, это означает, что столбцы матрицы $A - \lambda I$ линейно зависимы, а значит существует ненулевой вектор $x$ такой, что $(A - \lambda I)x = 0 \Leftrightarrow Ax - \lambda x = 0 \Leftrightarrow Ax = \lambda x$, то есть $\lambda$ --- собственное значение линейного оператора $A$. Ч.Т.Д.
+    
     \item \textbf{линейный оператор действует в $n$-мерном пространстве над полем, содержащем все корни его характеристического многочлена. Докажите, что существует базис пространства , в котором матрица оператора имеет верхний треугольный вид с главной диагональю, заполненной корнями характеристического многочлена в любом заранее заданном порядке.}
+
+    
     \item \textbf{Докажите, что если матрицы $A$ и $B$ подобны, то для произвольного многочлена $f(\lambda)$ матрицы $f(A)$ и $f(B)$ тоже подобны.}
-    \item \textbf{Докажите, что минимальный многочлен, аннулирующий квадратную матрицу, является делителем её характеристического многочлена.}
-    \item \textbf{докажите, что любая квадратная матрица с элементами из произвольного поля аннулируется своим характеристическим многочленом.}
-    \item \textbf{Докажите, что любой приведённый многочлен степени выше первой является характеристическим многочленом некоторой матрицы.}
+
+    Пусть $B = Q^{-1}AQ$, а многочлен $f(\lambda) = a_0 + a_1 \lambda + \cdots + a_n \lambda^n$, тогда $f(B) = a_0 + a_1B + \cdots + a_nB^n = a_0 + a_1 Q^{-1}AQ + \cdots + a_n \underbrace{(Q^{-1}AQQ^{-1}AQ \cdots Q^{-1}AQ)}_{n} = Q^{-1}a_0Q + Q^{-1}a_0B + \cdots + Q^{-1}a_nA^nQ = Q^{-1}(a_0 + a_1A + \cdots + a_nA^n)Q = Q^{-1}f(A)Q$, то есть матрицы $f(B)$ и $f(A)$ подобны. Ч.Т.Д.\\
+    
+    \item \textbf{Докажите, что минимальный многочлен, аннулирующий квадратную матрицу, является делителем её характеристического многочлена.}\\
+
+    Доказательство от противного. Из теоремы Кэли-Гамильтона известно, что характеристический многочлен $f(\lambda)$ является аннулирующим для матрицы $A$, пусть $g(\lambda)$ --- минимальный аннулиющий многочлен $A$ и он не является делителем её характеристического многочлена. Тогда поделим харантеристический многочлен на $g$ с остатком: $f(\lambda) = q(\lambda)g(\lambda) + r(\lambda)$, многочлен $r(\lambda)$ имеет меньшую степень, нежели $G(\lambda)$ и при этом $r(A) = f(A) - q(A)g(A) = 0 - Q(A)0 = 0$, то есть $r(\lambda)$ является аннулирующим многочленом, то есть $g(\lambda)$ --- не минимальный, а это противоречит нашему предположению. Значит $g(\lambda)$ является делителем характеристического многочлена. Ч.Т.Д. 
+    \item \textbf{Докажите, что любая квадратная матрица с элементами из произвольного поля аннулируется своим характеристическим многочленом.}
+
+    \begin{center}
+        \textbf{Теорема Кэли-Гамильтона.}
+    \end{center}
+    Пусть $\mathcal{A}: V \rightarrow V$ и $A$ --- матрица линейного оператора $\mathcal{A}$, и $f(\lambda) = |A - \lambda I|$ --- характеристический многочлен $A$. Тогда $f(A) = 0$.\\
+
+    Матричным многочленом называется выражение вида $f(\lambda) = A_0 + A_1 \lambda + \cdots + A_k \lambda^k$, а его значением при $\lambda = X$ называется $f(X) = A_0 + A_1 X + \cdots + A_k X^k$. Матричный многочлен $F(\lambda)$ можно разделить на другой матричный многочлен $G(\lambda)$ с остатком, то есть представить $F(\lambda)$ как $F(\lambda) = Q(\lambda)G(\lambda) + R(\lambda)$, причём степень $R(\lambda)$ строго меньше степени $G(\lambda)$.\\
+
+    Для матричных многочленов существует теорема Безу: из равенства $F(\lambda) = Q(\lambda)(\lambda I - A) + R(\lambda)$ следует равенство $F(A) = R(A)$.
+
+    \textit{Доказательство: }По индукции понижаем степень многочлена $F(\lambda) =  A_0 + A_1 \lambda + \cdots + A_k \lambda^k$: $F_1(\lambda) = F(\lambda) - A_k\lambda^{k - 1}(\lambda I - A) = F_1(\lambda) - A_k(\lambda^k I - \lambda^{k - 1}A)$, то есть $F_1(A) = F(A) - A_k(A^k - AA^{k-1}) = F(A)$, при этом многочлен $F_1(\lambda)$ имеет степень $k - 1$, аналогично можно получить многочлен $F_2(\lambda)$ степени $k - 2$ и так далее до многочлена $F_k(\lambda) = R(\lambda)$ степени $0$, при этом $F(\lambda) = R(\lambda)$.\\
+
+    Теперь назовём $f(\lambda) = |A - \lambda I| = a_0 + a_1 \lambda + \cdots + a_n \lambda^n$, а $F(\lambda) = a_0 I + a_1 I \lambda + \cdots + a_n I \lambda^n$, при этом $F(\lambda) = I f(\lambda)$. Обозначим $B(\lambda)$ присоединённую матрицу к матрице $A - \lambda I$, то есть матрицу из алгебраических дополнений к каждому из элементов $A - \lambda I$. Для неё выполнено: $B(A - \lambda I) = f(\lambda)I  =F(\lambda)$. Применим теорему Безу и получим, что $F(A) = R(A) = 0$, так как остатка нет. Ч.Т.Д.\\
+
+
+    а ещё можно было расширить поле, из которого элементы матрицы, до такого, в котором есть все корни его характеристического многочлена и диагонализовать матрицу $A$, а потом просто подставить её в характеристический многочлен.
+    \item \textbf{Докажите, что любой приведённый многочлен степени выше первой является характеристическим многочленом некоторой матрицы.}\\
+
+    \textit{Формулировка задания является не совсем корректной, так как легко заметить, что так как в матрице $A - \lambda I$ все $\lambda$ расположены по диагонали, то есть лишь одна перестановка $\sigma = \{1, 2 , \cdots, n\}$ такая, что при  $B = (A - \lambda I)$, $b_{1\sigma(1)}b_{2\sigma(2)} \cdots b_{n\sigma(n)}$ будет содержать все элементы с $\lambda$, то есть коэффициент при $\lambda^n$ будет равен ему же у $(a_{11} - \lambda)(a_{22} - \lambda)\cdots(a_{nn} - \lambda) = (-1)^n\lambda^n + \cdots$, как видим, при нечётных $n$ характеристический многочлен не может быть приведённым. Правильная формулировка:}\\
+
+    "Докажите, что любой приведённый многочлен степени выше первой является приведенным характеристическим многочленом некоторой матрицы."
+
+    Пусть у нас есть многочлен $g(x) = a_0 + a_1x + \cdots + a_{n - 1}x^{n - 1} + x^n$, рассмотрим следующего вида матрицу (она называется матрицей Фробениуса или сопутствующей матрицей $g(x)$): 
+    \[
+    F = 
+    \begin{bmatrix}
+        0 & 0 & 0 & \cdots & 0 &-a_0\\
+        1 & 0 & 0 & \cdots & 0 &-a_1\\
+        0 & 1 & 0 & \cdots & 0 & -a_2\\
+        \vdots & \vdots & \vdots & \ddots & \vdots & \vdots\\
+        0 & 0 & 0 & \cdots & 0 & -a_{n - 2}\\
+        0 & 0 & 0 &\cdots & 1 & -a_{n - 1}\\
+    \end{bmatrix}
+    \]
+    Вычислим определитель  матрицы $F - \lambda I$:
+    \[
+    f(\lambda)
+    \begin{vmatrix}
+        -\lambda & 0 & 0 & \cdots & 0 &-a_0\\
+        1 &  -\lambda & 0 & \cdots & 0 &-a_1\\
+        0 & 1 &  -\lambda & \cdots & 0 & -a_2\\
+        \vdots & \vdots & \vdots & \ddots & \vdots & \vdots\\
+        0 & 0 & 0 & \cdots &  -\lambda & -a_{n - 2}\\
+        0 & 0 & 0 &\cdots & 1 & -a_{n - 1}  -\lambda\\
+    \end{vmatrix} =\]\[ = -\lambda
+    \begin{vmatrix}
+     
+         -\lambda & 0 & \cdots & 0 &-a_1\\
+        1 &  -\lambda & \cdots & 0 & -a_2\\
+        \vdots & \vdots & \ddots & \vdots & \vdots\\
+         0 & 0 & \cdots &  -\lambda & -a_{n - 2}\\
+         0 & 0 &\cdots & 1 & -a_{n - 1}  -\lambda\\
+    \end{vmatrix} -(-1)^{n - 1}a_0 
+    \begin{vmatrix}
+        1 &  -\lambda & 0 & \cdots & 0 \\
+        0 & 1 &  -\lambda & \cdots & 0 \\
+        \vdots & \vdots & \vdots & \ddots & \vdots \\
+        0 & 0 & 0 & \cdots &  -\lambda \\
+        0 & 0 & 0 &\cdots & 1 \\
+    \end{vmatrix} = 
+    \]
+    \[
+    = (-1)^na_0 - \lambda
+     \begin{vmatrix}
+     
+         -\lambda & 0 & \cdots & 0 &-a_1\\
+        1 &  -\lambda & \cdots & 0 & -a_2\\
+        \vdots & \vdots & \ddots & \vdots & \vdots\\
+         0 & 0 & \cdots &  -\lambda & -a_{n - 2}\\
+         0 & 0 &\cdots & 1 & -a_{n - 1}  -\lambda\\
+    \end{vmatrix} = \]\[
+    (-1)^na_0 - \lambda((-1)^{n - 1}a_1 - \lambda(\cdots -\lambda(-a_{n - 2} - \lambda(-a_{n -1} - \lambda))) = (-1)^n(a_0 + a_1\lambda + \cdots + a_{n - 1}\lambda^{n - 1} + \lambda^n) = \]\[=(-1)^ng(x)
+    \]
+    если привести многочлен $f(\lambda)$, то получится приведённый многочлен $g(\lambda)$, который мог быть выбран любым. Ч.Т.Д.\\
+    
     \item \textbf{Преобразование $A \rightarrow PAP^{-1}$ будем называть элементарным преобразованием подобия, если матрица $P$ является матрицей перестановки, либо матрицей вида $P = I + \gamma E_{ij}$, где матрица $E_{ij} $ отличается от нулевой только единицей в позиции $(i, j)$, при $i \neq j$, а число $\gamma$ --- произвольное. Докажите, что с помощью $O(n^2)$ элементарных преобразований подобия матрицу порядка $n$ можно привести к верхнему почти треугольному виду}%ура, путём долгих раздумий я понял, почему не просто к треугольному виду, там же может быть верхняя строка из нулей.
     \item \textbf{Докажите, что алгебраическая кратность собственного значения не меньше его геометрической кратности.}
-    \item \textbf{Докажите, что собственные векторы попарно различных собственных значений линейно независимы.}
-    \item \textbf{докажите, что если матрица порядка $n$ имеет $n$ собственных значений, то она диагонализуема.}
-    \item \textbf{Докажите, что для нильпотентности линейного оператора необходимо и достаточно, чтобы он был квазискалярным, с собственным значением $0$.}
-    \item \textbf{Докажите, что линейный оператор  $A$ является квазискалярным с елинственным собственным значением $\lambda$, если сдвинутый оператор $A - \lambda I$ является нильпотентным.}
+    \item \textbf{Докажите, что собственные векторы попарно различных собственных значений линейно независимы.}\\
+
+    Доказательство от противного: предположим есть собственные вектора $x_1, \cdots,  x_k$, отвечающие различным собственным значениям $\lambda_1, \cdots, \lambda_k$: $Ax_1 = \lambda_1x_1, \cdots, Ax_k = \lambda_kx_k$. Если вектора $x_1, \cdots, x_k$ линейно зависимы, то существует нетривиальная линейная комбинация собственных векторов $\alpha_1 x_1 + \alpha_2 x_2 + \cdots + \alpha_n x_n = 0$, выразим отсюда $x_n = -\frac{\alpha_1}{\alpha_n}x_1 - \cdots - \frac{\alpha_{n - 1}}{\alpha_n}x_{n - 1} = \beta_1 x_1 + \cdots + \beta_{n - 1} x_{n - 1}$.\\
+
+    Теперь подействуем оператором на вектор $x_n$: $Ax_n = \beta_1 A x_1 + \cdots + \beta_{n - 1} A x_{n - 1} = \beta_1 \lambda_1 x_1 + \cdots + \beta_{n - 1} \lambda_{n - 1} x_{n - 1}$, но в то же время $Ax_n = \lambda_n x_n = \beta_1 \lambda_n x_1 + \cdots + \beta_{n - 1} \lambda_n x_{n - 1}$. Приравняем эти два выражения и перенесём всё в левую часть: $\beta_1 \lambda_1 x_1 + \cdots + \beta_{n - 1} \lambda_{n - 1} x_{n - 1} = \beta_1 \lambda_n x_1 + \cdots + \beta_{n - 1} \lambda_n x_{n - 1} \Rightarrow \beta_1 ( \lambda_1 - \lambda_n) x_1 + \cdots + \beta_{n - 1}(\lambda_{n - 1} -  \lambda_n) x_{n - 1} = 0$, а так как все собственные значения $\lambda_1, \cdots, \lambda_n$ различны, то это означает, что существует нетривиальная линейная комбинация собственных векторов $x_1, \cdots, x_{n - 1}$ равная нулю, то есть если линейно зависимы вектора $x_1, \cdots, x_n$, то линейно зависимы и вектора $x_1, \cdots, x_{n - 1}$. Применяя те же рассуждения легко получить, что линейно зависимы и вектора $x_1, \cdots, x_{n - 2}$ и так далее по индукции по $n$ получаем, что линейно зависимы вектора $x_1$ и $x_2$.\\
+
+    Это означает, что $x_2 = \alpha x_1$, при этом $Ax_1 = \lambda_1 x_1$ и $Ax_2 = \alpha Ax_1 = \alpha \lambda_1 x_1$, но $Ax_2 = \lambda_2x_2 = \alpha \lambda_2 x_1$, то есть $\alpha \lambda_1 x = \alpha \lambda_2 x$, а значит $\lambda_1 = \lambda_2$, а это противоречит исходному предположению, значит собственные вектора, отвечающие различным собственным значениям линейно независимы. Ч.Т.Д.
+    
+    
+    \item \textbf{докажите, что если матрица порядка $n$ имеет $n$ собственных значений, то она диагонализуема.}\\
+
+    Матрицу порядка $n$ можно рассматривать как матрицу $A$ линейного оператора $\mathcal{A}: V \rightarrow V$, где $dimV = n$. Так как $A$ имеет $n$ разлиных собственных значений, то существует $n$ линейно независимых собственных векторов $x_1, \cdots, x_n$, отвечающих различным собственным значениям, а так как размерность $V$ равна $n$, то $x_1, \cdots, x_n$ --- базис линейного пространства $V$, значит существует матрица $Q_{xe}$ перехода из старого базиса $e$ в новый базис из собственных векторов $x$, то есть $A = Q_{xe}^{-1}\Lambda Q_{xe}$, где $\Lambda$ --- матрица оператора $\mathcal{A}$ в базисе из собственных векторов.\\
+
+    Запишем вектор из $V$ в базисе из собственных векторов, подействуем на него оператором $\mathcal{A}$ и запишем матрицу $\Lambda$ оператора $\mathcal{A}$ в новом базисе: $x = \alpha_1 x_1 + \cdots + \alpha_n x_n$, $\mathcal{A} x = \alpha_1 \mathcal{A}  x_1 + \cdots + \alpha_n \mathcal{A} x_n = \alpha_1 \lambda_1 x_1 + \cdots + \alpha_n \lambda_n x_n$, то есть просто каждая $i$-тая координата увеличилась в $\lambda_i$ раз, то есть:
+    \[
+    \Lambda = 
+    \begin{bmatrix}
+        \lambda_1 & 0 & 0 & \cdots & 0\\
+        0 & \lambda_2 & 0 & \cdots & 0\\
+        0 & 0 & \lambda_3 & \cdots & 0\\
+        \vdots & \vdots & \vdots & \ddots & \vdots\\
+        0 & 0 & 0 & \cdots & \lambda_n\\       
+    \end{bmatrix}
+    \]
+    Так как $\Lambda = Q_{xe}AQ_{xe}^{-1}$, то это значит, что матрица $A$ диагонализуема. Ч.Т.Д.
+    
+    \item \textbf{Докажите, что для нильпотентности линейного оператора необходимо и достаточно, чтобы он был квазискалярным, с единственным собственным значением $0$.}\\
+
+    \textit{Уточнение. }Для тех, кто не читал методичку Тыртыша (я вот например яйцо читать предпочитаю), квазискалярный это оператор $A: V \rightarrow V$ с единственным собственным значением алгебраической кратности $n = dimV$\\
+
+    \textit{Необходимость:} Если оператор нильпотентный, то есть $\exists  q > 0: A^q = \mathcal{O}$, то для любого его собственного значения $\lambda_i \in \{\lambda_1, \cdots, \lambda_n\}$ (а так как это корни характеристического многочлена, то всегда есть поле --- расширение исходного, в котором будет ровно $n$ собственных значений) верно, что $A^qx = \lambda_i^qx = 0$, а так как $x \neq 0$, то $\lambda_i = 0$, таким образом у $A$ есть только одно собственное значение $\lambda = 0$ алгебраической кратности $n$, то есть $A$ --- квазискалярный.\\
+
+    \textit{Достаточность:} Так как оператор $A$ --- квазискалярный, то его характеристический многочлен равен $f(\lambda)|A - \lambda I| = (-\lambda)^n$. По теореме Кэли-Гамильтона $f(A) = (-A)^n = 0 \Rightarrow A^n = 0$, а значит оператор $A$ --- нильпотентный. Ч.Т.Д.
+    \item \textbf{Докажите, что линейный оператор  $A$ является квазискалярным с единственным собственным значением $\lambda$, тогда и только тогда, когда сдвинутый оператор $A - \lambda I$ является нильпотентным.}\\
+
+    Пусть $\lambda'$ --- собственное значение оператора $A$, а $x$ --- отвечающий ему собственный вектор. Найдём собственные вектора и значения сдвинутого оператора $A - \lambda I$: $(A - \lambda I) x = Ax - \lambda x = (\lambda' - \lambda)x$, то есть собственный вектор оператора $A$ будет и собственным вектором оператора $A - \lambda I$, а отвечающее ему собственное значение будет равно $\Lambda =  \lambda' - \lambda$. Так как оператор $A$ является в свою очередь сдвинутым для оператора $A - \lambda I$, то значит собственные вектора обоих операторов совпадают, а собственные значения связаны соотношением $\lambda = \Lambda + \lambda'$\\
+
+    Если оператор $A - \lambda I$ нильпотентный, то в силу предыдущей задачи он квазискалярный с единственным собственным значением $\Lambda = 0$, значит собственное значение оператора $A$ единственное и равно $\Lambda + \lambda = \lambda$ кратности $n$, то есть оператор $A$ --- квазискалярный с единственным собственным значением $\lambda$.\\
+
+    Справедливо и обратное, если $A$ --- квазискалярный с единственным собственным значением $\lambda$, то сдвинутый оператор $A - \lambda I$ имеет единственное собственное значение $\Lambda = \lambda - \lambda = 0$ кратности $n$, то есть  $A - \lambda I$ --- квазискалярный оператор с единственным собственным значением $\Lambda = 0$, а значит он нильпотентный. Ч.Т.Д.
+    
     \item \textbf{Докажите, что любой вырожденный оператор либо является нильпотентным, либо расщепляется в сумму нильпотентного и обратимого операторов.}
     \item \textbf{Пусть линейный оператор действует на конечномерном пространстве над полем, которое содержит все корни его характеристического многочлена. докажите, что он расщепляется на прямую сумму своих сужений на корневые подпространства своих попарно различных собственных значений.}
     \item \textbf{Матрица $A$ порядка $n$ имеет попарно различные собственные значения $\lambda_1, \cdots ,\lambda_n$ и соответствующие им собственные векторы $v_1, \cdots, v_n $. Найти собственные векторы линейного оператора $X \rightarrow A^3XA^4, \quad X \in \mathds{C}^{n \times n}$.}
