--- a/titlepage.tex
+++ b/titlepage.tex
@@ -15,6 +15,7 @@
        Владимир Якунин \\
        (waiting for answer)Надежда Белоусова\\
        (waiting for commits) Ирина клочкова\\
+       (waiting for commits) Арсений Поздняков\\
        \end{flushright}
 
        \vfill
